// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the capacity 1`] = `
Object {
  "capacity": 20,
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the capacity type 1`] = `
Object {
  "capacity": "",
  "capacityType": "unlimited",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the description 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "new description",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the end date 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the end date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": Object {
    "type": "moment",
  },
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the end time 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "13:45",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the price 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": 99,
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the sku 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "12345678",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the start date 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "January 1, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the start date moment 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": Object {
    "type": "moment",
  },
  "startTime": "19:30",
  "title": "",
}
`;

exports[`Details reducer should set the start time 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "title": "",
}
`;

exports[`Details reducer should set the title 1`] = `
Object {
  "capacity": "",
  "capacityType": "capped",
  "description": "",
  "endDate": "July 22, 2018",
  "endDateMoment": "2018-07-19T19:30:00.000Z",
  "endTime": "19:30",
  "price": "",
  "sku": "",
  "startDate": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30",
  "title": "new title",
}
`;
